--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href ="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anywhere Workers</title>
+</head>
+<body>  
+<h1>Anywhere<br>Workers</h1> 
+ <p>There's a new generation of workers who won't be tied to any one place. They can't be restricted by the confines of an office, or bound by the standard 9-5. The future of work is anywhere.
+ </p>
+ <p class="read-more"> more about this growing trend in our study</p>
+ <a href="#">Watch Video</a> 
+</body>
+</html>
